Add Collage Gallery block (#907)
* Adding the collage block

* Add index to gallery transform

* Render a placeholder whe no image exists.

* Stylelint

* Tweak enableGutter

* Introduce style names

* Remove caption color support

* Remove example as it was causing style panel issues

* Update icon.js

* Update block description

* Move MediaFilterControl before edit icon

* Remove "Edit gallery" toolbar control

* Linting

* Tweak "Remove Item"

* Update icon.js

* Turn off captions for the layered style

* Add support for custom links

* Update edit.js

* Fix transient

* Update _is-transient.scss

* Tweak placeholder outline offset to better suit dropzones

* Set default for gutter to 25

* Tweak layout using padding utility classes instead of margin (#926)

* Trying margin/padding tweaks

* Fix default and tiled editor

* Finish gutter

* Tweaks

* Responsive tweaks

* Shadow tweaks

* Linting

* Linting

* Fix shadow

* Add padding if fullwidth

* Fix fullwidth padding in editor

* Don't show empty figures if an image is not assigned

* Show MediaFilterControl only when images are assigned

* Filter empty images on transform

* Fix preview styles

* Theme first collage utilities (#941)

* Improve utility classes

* Finish utilities

* Tweak tiled

* Add alignfull to tiled

* Use ButtonGroup for shadow

* Add shadow class to media placeholders

* Add shadow attribute to block.json

* Maintain gutter value when switching from layered style

* Remove debugging code

* Update save.js

* Linting

--- a/src/styles/editor/_is-transient.scss
+++ b/src/styles/editor/_is-transient.scss
@@ -21,5 +21,10 @@
 		margin-top: -9px;
 		position: absolute;
 		top: 50%;
+		z-index: 2;
+	}
+
+	.components-coblocks-gallery-item__remove-menu {
+		z-index: -1;
 	}
 }
