--- a/src/blocks/blogroll/styles/style.scss
+++ b/src/blocks/blogroll/styles/style.scss
@@ -1,14 +1,12 @@
 .wp-block-coblocks-blogroll {
+	list-style: none;
+
 	.slick-slide {
 		margin-right: 10px;
 	}
 
 	&.alignfull {
 		padding: 0 12px;
-	}
-
-	&.wp-block-coblocks-blog__list {
-		list-style: none;
 	}
 
 	&.is-style-list {
@@ -25,9 +23,8 @@
 			align-items: flex-start;
 			display: flex;
 			margin: 0 0 30px;
-			width: 100%;
-			border-bottom: 0.5px solid #8d96a0;
 			padding-bottom: 20px;
+			width: 100%;
 
 			.wp-block-coblocks-blog__post-info {
 				padding: 0;
@@ -35,22 +32,22 @@
 			}
 
 			.wp-block-coblocks-blog__post-image-wrapper {
-				position: relative;
-				width: 200px;
-				min-width: 200px;
-				height: 200px;
-				background-size: 100%;
-				background-repeat: no-repeat;
 				background-position-x: center;
 				background-position-y: top;
+				background-repeat: no-repeat;
+				background-size: 100%;
+				height: 200px;
 				margin-right: 20px;
+				min-width: 200px;
+				position: relative;
+				width: 200px;
 
 				a {
+					height: 100%;
+					left: 0;
 					position: absolute;
-					height:100%;
-					width:100%;
-					top:0;
-					left:0;
+					top: 0;
+					width: 100%;
 				}
 			}
 		}
@@ -62,117 +59,114 @@
 		padding: 0;
 
 		li {
-		  	border: 1px solid #8d96a0;
+			background-color: $white;
+			border: 1px solid #8d96a0;
 			margin: 0 16px 16px 0;
 			width: 100%;
-		  	background-color: #fff;
 
-		  &.list-center {
-			display: flex;
-			align-items: center;
-		  }
-
-		  .wp-block-coblocks-blog__post-info {
-			word-break: break-word;
-		  }
-
-		  .wp-block-coblocks-blog__post-image-wrapper {
-			position:relative;
-			width:100%;
-			min-height: 300px;
-			background-size:cover;
-
-			a {
-			  position: absolute;
-			  height:100%;
-			  width:100%;
-			  top:0;
-			  left:0;
+			&.list-center {
+				align-items: center;
+				display: flex;
 			}
-		  }
+
+			.wp-block-coblocks-blog__post-info {
+				word-break: break-word;
+			}
+
+			.wp-block-coblocks-blog__post-image-wrapper {
+				background-size: cover;
+				min-height: 300px;
+				position: relative;
+				width: 100%;
+
+				a {
+					height: 100%;
+					left: 0;
+					position: absolute;
+					top: 0;
+					width: 100%;
+				}
+			}
 		}
 	}
 
 	&.is-style-carousel {
-	  height: 100%;
-	  position: relative;
+		height: 100%;
+		position: relative;
 
-	  .wp-block-coblocks-blog__post-image-wrapper {
-		position:relative;
-		width:100%;
-		min-height: 140px;
-		background-size:cover;
-		background-position-x: center;
-		background-position-y: center;
+		.wp-block-coblocks-blog__post-image-wrapper {
+			background-position-x: center;
+			background-position-y: center;
+			background-size: cover;
+			min-height: 140px;
+			position: relative;
+			width: 100%;
 
-		a {
-		  position: absolute;
-		  height:100%;
-		  width:100%;
-		  top:0;
-		  left:0;
+			a {
+				height: 100%;
+				left: 0;
+				position: absolute;
+				top: 0;
+				width: 100%;
+			}
 		}
-	  }
 	}
 
 	.coblocks-gallery {
-	  height: 100%;
-	  position: relative;
+		height: 100%;
+		position: relative;
 	}
 
 	@include break-small {
 		@for $i from 2 through 6 {
 			&.columns-#{ $i } li {
-				width: calc((100% / #{ $i }) - 18px);
+				width: calc((100% / #{$i}) - 18px);
 			}
 		}
 	}
 
-  	.coblocks-gallery--item {
-	  margin-right: 15px!important;
+	.coblocks-gallery--item {
+		margin-right: 15px !important;
 	}
 }
 
 .wp-block-coblocks-blog__post-date {
-  display: block;
-  color: $dark-gray-300;
-  font-size: $text-editor-font-size;
+	color: $dark-gray-300;
+	display: block;
+	font-size: $text-editor-font-size;
 }
 
 .wp-block-coblocks-blog__post-excerpt {
-  p {
-	margin-top: $grid-size!important;
-	margin-bottom: $grid-size-large!important;
-	font-size: $editor-font-size!important;
-  }
+	p {
+		font-size: $editor-font-size !important;
+		margin-bottom: $grid-size-large !important;
+		margin-top: $grid-size !important;
+	}
 }
 
 .wp-block-coblocks-blog__post-read-more {
-  a {
-	color: #0073aa !important;
-	text-decoration: none;
-	text-align: inherit;
-	font-size: $editor-font-size !important;
-  }
+	a {
+		text-align: inherit;
+		text-decoration: none;
+	}
 }
 
 .wp-block-coblocks-blog__post-info {
-  width: 100%;
-  padding: 20px;
-  box-sizing: border-box;
-  word-break: break-word;
+	box-sizing: border-box;
+	padding: 20px;
+	width: 100%;
+	word-break: break-word;
 
-  h5 {
-	margin: 0!important;
+	h5 {
+		margin: 0 !important;
 
-	a {
-	  color: inherit;
-	  text-decoration: none;
+		a {
+			color: inherit;
+			text-decoration: none;
+		}
 	}
-
-  }
 }
 
 .wp-block-coblocks-blog__post-image {
-  margin-bottom: 20px;
+	margin-bottom: 20px;
 }
