--- a/src/blocks/blogroll/styles/style.scss
+++ b/src/blocks/blogroll/styles/style.scss
@@ -20,35 +20,12 @@
 		}
 
 		li {
-			align-items: flex-start;
-			display: flex;
-			margin: 0 0 30px;
-			padding-bottom: 20px;
-			width: 100%;
+			align-items: stretch;
+			margin: 0 0 2em;
 
-			.wp-block-coblocks-blogroll__post-info {
+			.wp-block-coblocks-blogroll__content {
 				padding: 0;
 				width: 100%;
-			}
-
-			.wp-block-coblocks-blogroll__post-image-wrapper {
-				background-position-x: center;
-				background-position-y: top;
-				background-repeat: no-repeat;
-				background-size: 100%;
-				height: 200px;
-				margin-right: 20px;
-				min-width: 200px;
-				position: relative;
-				width: 200px;
-
-				a {
-					height: 100%;
-					left: 0;
-					position: absolute;
-					top: 0;
-					width: 100%;
-				}
 			}
 		}
 	}
@@ -64,16 +41,16 @@
 			margin: 0 16px 16px 0;
 			width: 100%;
 
-			&.list-center {
-				align-items: center;
-				display: flex;
-			}
+			// &.list-center {
+			// 	align-items: center;
+			// 	display: flex;
+			// }
 
-			.wp-block-coblocks-blogroll__post-info {
+			.wp-block-coblocks-blogroll__content {
 				word-break: break-word;
 			}
 
-			.wp-block-coblocks-blogroll__post-image-wrapper {
+			.wp-block-coblocks-blogroll__post-image {
 				background-size: cover;
 				min-height: 300px;
 				position: relative;
@@ -94,7 +71,7 @@
 		height: 100%;
 		position: relative;
 
-		.wp-block-coblocks-blogroll__post-image-wrapper {
+		.wp-block-coblocks-blogroll__post-image {
 			background-position-x: center;
 			background-position-y: center;
 			background-size: cover;
@@ -130,6 +107,11 @@
 	}
 }
 
+.wp-block-coblocks-blogroll__post-image {
+	height: 9em;
+	width: 9em;
+}
+
 .wp-block-coblocks-blogroll__post-date {
 	color: $dark-gray-300;
 	display: block;
@@ -144,14 +126,14 @@
 	}
 }
 
-.wp-block-coblocks-blogroll__post-read-more {
+.wp-block-coblocks-blogroll__more-link {
 	a {
 		text-align: inherit;
 		text-decoration: none;
 	}
 }
 
-.wp-block-coblocks-blogroll__post-info {
+.wp-block-coblocks-blogroll__content {
 	box-sizing: border-box;
 	padding: 20px;
 	width: 100%;
@@ -165,8 +147,4 @@
 			text-decoration: none;
 		}
 	}
-}
-
-.wp-block-coblocks-blogroll__post-image {
-	margin-bottom: 20px;
 }
