--- a/src/blocks/blogroll/styles/editor.scss
+++ b/src/blocks/blogroll/styles/editor.scss
@@ -1,29 +1,20 @@
-.editor-block-list__block[data-type="coblocks/blogroll"] {
-	padding-left: 2.5em;
-
-	&.is-style-grid {
-		padding-left: 0;
-	}
-
-	ul.is-style-list {
-		.wp-block-coblocks-blogroll__post-image {
-			background-repeat: no-repeat;
-			background-size: 100%;
-		}
-	}
-
-	li a > div {
-		display: inline;
-	}
-
-	&.editor-block-list__block[data-align="full"] {
-		.wp-block-coblocks-blogroll {
-			padding: 0 12px;
-		}
+.wp-block[data-type="coblocks/blogroll"] {
+	&[data-align="full"] ul {
+		padding-left: map-get($padding, 5);
+		padding-right: map-get($padding, 5);
 	}
 
 	.flickity-enabled {
 		height: 100% !important;
 		position: inherit;
+	}
+
+	.wp-block-coblocks-blogroll__more-link {
+		// Remove the core link focus styling
+		&:focus {
+			box-shadow: none;
+			color: inherit;
+			outline: none;
+		}
 	}
 }
