--- a/src/common.scss
+++ b/src/common.scss
@@ -4,8 +4,43 @@
 @import "styles/editor/core/breakpoints";
 @import "styles/editor/core/mixins";
 
-// Colors.
-$coblocks: #1e35b9;
+// Margin Utility
+$margin: (
+	0: 0,
+	1: 0.25em,
+	2: 0.25em,
+	3: 0.5em,
+	4: 0.75em,
+	5: 1em,
+	6: 1.5em,
+	7: 2.5em
+);
+
+// Padding Utility
+$padding: (
+	0: 0,
+	1: 0.25em,
+	2: 0.25em,
+	3: 0.5em,
+	4: 0.75em,
+	5: 1em
+);
+
+$padding__sm: (
+	0: 0,
+	1: 0.5em,
+	2: 1em,
+	3: 1.5em,
+	4: 1.75em
+);
+
+$padding__lg: (
+	0: 0,
+	1: 1em,
+	2: 1.5em,
+	3: 2em,
+	4: 2.75em
+);
 
 // Gutters
 $gutter--small: 18px;
