--- a/src/blocks/blogroll/styles/style.scss
+++ b/src/blocks/blogroll/styles/style.scss
@@ -87,8 +87,8 @@
 }
 
 .wp-block-coblocks-blogroll__image {
-	// height: 9em;
-	// width: 9em;
+	height: 9em;
+	width: 9em;
 }
 
 .wp-block-coblocks-blogroll__post-date {
