--- a/src/blocks/blogroll/styles/style.scss
+++ b/src/blocks/blogroll/styles/style.scss
@@ -86,10 +86,11 @@
 	// }
 }
 
-.wp-block-coblocks-blogroll__image {
-	height: 9em;
-	width: 9em;
-}
+// .wp-block-coblocks-blogroll__image,
+// .wp-block-coblocks-blogroll__post-image {
+// 	height: 9em;
+// 	width: 9em;
+// }
 
 .wp-block-coblocks-blogroll__post-date {
 	color: $dark-gray-300;
