--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -20,6 +20,38 @@
 // Utility tooltips
 @import "style/tooltips";
 
+.w-1\/2 {
+	width: 50%;
+}
+
+.w-1\/3 {
+	width: 33.33%;
+}
+
+.w-1\/4 {
+	width: 25%;
+}
+
+.w-1\/5 {
+	width: 20%;
+}
+
+.h-1\/2 {
+	height: 50%;
+}
+
+.h-1\/3 {
+	height: 33.33%;
+}
+
+.h-1\/4 {
+	height: 25%;
+}
+
+.h-1\/5 {
+	height: 20%;
+}
+
 .has-text-align-right {
 	text-align: right;
 }
