--- a/src/styles/style/_padding.scss
+++ b/src/styles/style/_padding.scss
@@ -14,6 +14,10 @@
 	@include utilities($padding, "padding-left", "-");
 }
 
+.pt-full {
+	padding-top: 100%;
+}
+
 // 600px +
 @include break-small() {
 	.sm\:pt {
