Clean up Inspector

--- a/src/blocks/blogroll/styles/editor.scss
+++ b/src/blocks/blogroll/styles/editor.scss
@@ -18,3 +18,8 @@
 		}
 	}
 }
+
+.edit-post-settings-sidebar__panel-block .components-base-control.components-coblocks-blogroll-thumbnail-size {
+	margin-bottom: 28px;
+	margin-top: -8px;
+}
