--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -14,54 +14,14 @@
 // Utility classes
 @import "style/padding";
 @import "style/margin";
+@import "style/columns";
+@import "style/height";
+@import "style/width";
 @import "style/gutter";
 @import "style/shadow";
 
 // Utility tooltips
 @import "style/tooltips";
-
-.w-1\/2 {
-	width: 50%;
-}
-
-.w-1\/3 {
-	width: 33.33%;
-}
-
-.w-1\/4 {
-	width: 25%;
-}
-
-.w-1\/5 {
-	width: 20%;
-}
-
-.h-1\/2 {
-	height: 50%;
-}
-
-.h-1\/3 {
-	height: 33.33%;
-}
-
-.h-1\/4 {
-	height: 25%;
-}
-
-.h-1\/5 {
-	height: 20%;
-}
-
-// 600px +
-@include break-small() {
-	.sm\:w-1\/3 {
-		width: 33.33%;
-	}
-
-	.sm\:h-1\/3 {
-		height: 33.33%;
-	}
-}
 
 // 782px+
 @include break-medium() {
