--- a/src/blocks/blogroll/styles/style.scss
+++ b/src/blocks/blogroll/styles/style.scss
@@ -85,3 +85,44 @@
 	display: block;
 	font-size: $default-font-size;
 }
+
+.is-twentynineteen {
+	.wp-block-coblocks-blogroll {
+		line-height: 1.6;
+
+		a {
+			font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
+				"Helvetica Neue", sans-serif;
+			font-size: calc(22px * 1.125);
+			font-weight: 700;
+			line-height: 1.2;
+			margin-bottom: 0.5rem;
+			margin-top: 0.5rem;
+			text-decoration: none !important;
+		}
+
+		&__date {
+			font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
+				"Helvetica Neue", sans-serif;
+			font-weight: 700;
+		}
+	}
+}
+
+.is-twentytwenty {
+	.wp-block-coblocks-blogroll a {
+		font-family: "Inter var", -apple-system, BlinkMacSystemFont, "Helvetica Neue", Helvetica, sans-serif;
+		font-weight: 700;
+		letter-spacing: -0.025em;
+		text-decoration: none;
+	}
+
+	.wp-block-coblocks-blogroll__date {
+		color: #6d6d6d;
+		font-family: "Inter var", -apple-system, BlinkMacSystemFont, "Helvetica Neue", Helvetica, sans-serif;
+		font-size: 0.7em;
+		font-weight: 600;
+		letter-spacing: normal;
+		margin-bottom: 0.2em;
+	}
+}
