Remove excess style from first li in columns-1

--- a/src/blocks/blogroll/styles/style.scss
+++ b/src/blocks/blogroll/styles/style.scss
@@ -3,6 +3,10 @@
 		margin-top: map-get($margin, 2);
 	}
 
+	&.columns-1 > li:first-child {
+		margin-top: 0;
+	}
+
 	&.columns-1 > li:last-child {
 		margin-bottom: 0;
 	}
