Update empty placeholder

--- a/src/blocks/blogroll/styles/editor.scss
+++ b/src/blocks/blogroll/styles/editor.scss
@@ -12,6 +12,10 @@
 			outline: none;
 		}
 	}
+
+	.components-placeholder__cancel-button {
+		margin-top: 10px;
+	}
 }
 
 .edit-post-settings-sidebar__panel-block .components-base-control.components-coblocks-blogroll-thumbnail-size {
