--- a/src/blocks/posts/styles/editor.scss
+++ b/src/blocks/posts/styles/editor.scss
@@ -1,10 +1,10 @@
-.wp-block[data-type="coblocks/blogroll"] {
+.wp-block[data-type="coblocks/posts"] {
 	.flickity-enabled {
 		height: 100% !important;
 		position: inherit;
 	}
 
-	.wp-block-coblocks-blogroll__more-link {
+	.wp-block-coblocks-posts__more-link {
 		// Remove the core link focus styling
 		&:focus {
 			box-shadow: none;
@@ -18,7 +18,7 @@
 	}
 }
 
-.edit-post-settings-sidebar__panel-block .components-base-control.components-coblocks-blogroll-thumbnail-size {
+.edit-post-settings-sidebar__panel-block .components-base-control.components-coblocks-posts-thumbnail-size {
 	margin-top: -10px;
 
 	&.has-content {
