Move styles into the block

--- a/src/blocks/post-carousel/styles/style.scss
+++ b/src/blocks/post-carousel/styles/style.scss
@@ -1,4 +1,5 @@
 .wp-block-coblocks-post-carousel {
+	background: #777;
 	height: 100%;
 	position: relative;
 
@@ -23,9 +24,9 @@
 		}
 	}
 
-	.slick-slide {
-		margin-right: map-get($margin, 5);
-	}
+	// .slick-slide {
+	// 	margin-right: map-get($margin, 5);
+	// }
 
 	.coblocks-gallery {
 		height: 100%;
@@ -35,6 +36,30 @@
 			margin-right: map-get($margin, 5);
 		}
 	}
+
+	.coblocks-blog-post--item {
+		background-color: #fff;
+		border: 1px solid #8d96a0;
+		margin-right: 10px;
+
+		// We really don't want margin on the flickity items.
+		// Set 100% so the ResizableBox functions properly.
+		.wp-block-coblocks-gallery-carousel &,
+		.wp-block-coblocks-gallery-thumbnails & {
+			height: 100%;
+			margin: 0 !important;
+		}
+
+		.has-no-alignment .has-carousel-lrg & {
+			@media (min-width: 1300px) {
+				width: 70%;
+			}
+		}
+
+		.has-no-alignment .has-carousel-xlrg & {
+			width: 100%;
+		}
+	}
 }
 
 .wp-block-coblocks-blogroll__date {
@@ -42,3 +67,5 @@
 	display: block;
 	font-size: $editor-font-size;
 }
+
+@import "slick";
