--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -23,6 +23,10 @@
 // Utility tooltips
 @import "style/tooltips";
 
+.text-center {
+	text-align: center;
+}
+
 .relative {
 	position: relative;
 }
