--- a/src/blocks/post-carousel/styles/style.scss
+++ b/src/blocks/post-carousel/styles/style.scss
@@ -1,26 +1,62 @@
 .wp-block-coblocks-post-carousel {
-	.wp-block-coblocks-blogroll__image {
-		background-position-x: center;
-		background-position-y: center;
-		background-size: cover;
-		min-height: 140px;
-		position: relative;
-		width: 100%;
+	&__date {
+		color: $dark-gray-300;
+		display: block;
+		font-size: $editor-font-size;
+	}
+}
 
-		a {
-			height: 100%;
-			left: 0;
-			position: absolute;
-			top: 0;
-			width: 100%;
+@import "slick";
+
+.is-twentynineteen {
+	.wp-block-coblocks-post-carousel {
+		line-height: 1.6;
+
+		&__content a {
+			font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
+				"Helvetica Neue", sans-serif;
+			font-size: calc(22px * 1.125);
+			font-weight: 700;
+			line-height: 1.2;
+			margin-bottom: 0.5rem;
+			margin-top: 0.5rem;
+			text-decoration: none !important;
+		}
+
+		&__date {
+			font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
+				"Helvetica Neue", sans-serif;
+			font-weight: 700;
 		}
 	}
 }
 
-.wp-block-coblocks-blogroll__date {
-	color: $dark-gray-300;
-	display: block;
-	font-size: $editor-font-size;
-}
+.is-twentytwenty {
+	.wp-block-coblocks-post-carousel {
+		color: #6d6d6d;
+	}
 
-@import "slick";
+	.wp-block-coblocks-post-carousel .columns {
+		margin-bottom: 0.5em;
+	}
+
+	.wp-block-coblocks-post-carousel a {
+		font-family: "Inter var", -apple-system, BlinkMacSystemFont, "Helvetica Neue", Helvetica, sans-serif;
+		font-weight: 700;
+		letter-spacing: -0.025em;
+		text-decoration: none;
+
+		&:hover {
+			text-decoration: underline;
+		}
+	}
+
+	.wp-block-coblocks-post-carousel__date {
+		color: #6d6d6d;
+		font-family: "Inter var", -apple-system, BlinkMacSystemFont, "Helvetica Neue", Helvetica, sans-serif;
+		font-size: 0.7em;
+		font-weight: 600;
+		letter-spacing: normal;
+		margin-bottom: 0.2em;
+	}
+}
