Add new Post Carousel block to display a slideshow of blog posts (#966)
* Added Blog block which is the combination of latest posts and rss core gutenberg blocks, but with some additional features. Added slick library, and scripts for initializing it.

* Styling changes.

* Change blog name to blogroll, extracted inspector into separate file.

* Styling updates.

* Styling changes, keywords for blogroll changed.

* Added lost dependency.

* Clean up files for phpcs

* Updates for ESLint

* Cleanup. Get blogroll running.

* Remove unused carousel settings. Update style on initial render

* Tweak esc_url/esc_html on read more link. Additional updates.

* Tweaks

* Style tweaks.  => . Filter blogroll carousel settings with coblocks_blogroll_carousel_settings

* Revert 'test' code

* Add back overwritten package.json

* Fix deprecation

* Organize

* Organize per coblocks standards

* Update index.js

* Tweak Inspector UX

* Update initial style from componentDidMount, instead of from render.

* Fix style condition in inspector.

* Fixed the help in inspector.

* Move script into the blogroll has_block

* Use proper prefixes (not done)

* Exploring UX tweaks

* Clean up

* Use consistent classname

* Using utilities

* Working

* Update index.php

* Test

* Fix

* Clean up thumbnails

* Clean up Inspector

* Tweaks for List

* Improve responsive

* Improve Sorting & Filtering UX on external

* Cleaning up

* Clean up utitlies

* Add save return null for core WP 5.2

* Update edit.js

* Add prefixes to php functions

* Update index.php

* Organize attributes

* Remove icons we're not using

* Linting

* Add icon for list style

* Cleanup

* Add styling for 2019 and 2020 themes

* Grid style

* Update _columns.scss

* Improve defaults, tweak icons

* Added responsiveness to slick carousel. Fixed a small comma bug.

* eslint fix

* post links should be disabled whe

--- a/src/common.scss
+++ b/src/common.scss
@@ -13,7 +13,15 @@ $margin: (
 	4: 2em,
 	5: 2.5em,
 	6: 3em,
-	7: 3.5em
+	7: 3.5em,
+	8: 4em,
+	-1: 0.5em,
+	-2: -1em,
+	-3: -1.5em,
+	-4: -2em,
+	-5: -2.5em,
+	-6: -3em,
+	-7: -3.5em
 );
 
 // Padding Utility
@@ -25,7 +33,8 @@ $padding: (
 	4: 2em,
 	5: 2.5em,
 	6: 3em,
-	7: 3.5em
+	7: 3.5em,
+	8: 4em
 );
 
 $padding__sm: (
