Remove ID from Radio

--- a/src/blocks/form/styles/editor.scss
+++ b/src/blocks/form/styles/editor.scss
@@ -121,10 +121,11 @@
 	.coblocks-field-multiple__add-option {
 		margin-left: 21px;
 		margin-top: 5px;
+		font-weight: 600;
 	}
 
 	.coblocks-field-multiple__add-option svg {
-		margin-right: 12px;
+		margin-right: 5px;
 	}
 }
 
