Use proper variables that already exist

--- a/src/components/block-gallery/styles/style/_lightbox.scss
+++ b/src/components/block-gallery/styles/style/_lightbox.scss
@@ -34,7 +34,7 @@
 	align-items: center;
 	color: $white;
 	display: flex;
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue";
+	font-family: $default-font;
 	font-size: 0.5em;
 	justify-content: space-between;
 	left: 3%;
