--- a/src/blocks/post-carousel/styles/style.scss
+++ b/src/blocks/post-carousel/styles/style.scss
@@ -58,8 +58,7 @@
 		line-height: 1.6;
 
 		&__content a {
-			font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
-				"Helvetica Neue", sans-serif;
+			font-family: $default-font;
 			font-size: calc(22px * 1.125);
 			font-weight: 700;
 			line-height: 1.2;
@@ -69,8 +68,7 @@
 		}
 
 		&__date {
-			font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
-				"Helvetica Neue", sans-serif;
+			font-family: $default-font;
 			font-weight: 700;
 		}
 	}
