--- a/src/blocks/social-profiles/styles/editor.scss
+++ b/src/blocks/social-profiles/styles/editor.scss
@@ -24,10 +24,10 @@
 
 .block-library-button__inline-link--coblocks {
 	align-items: center;
-	background: #fff;
+	background: $white;
 	display: flex;
 	flex-wrap: wrap;
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+	font-family: $default-font;
 	font-size: 13px;
 	line-height: 1.4;
 	margin-bottom: 0;
@@ -39,6 +39,6 @@
 	}
 
 	svg {
-		margin: 0px 8px 0px 8px;
+		margin: 0 8px 0 8px;
 	}
 }
