--- a/src/components/block-gallery/styles/style/_core-themes.scss
+++ b/src/components/block-gallery/styles/style/_core-themes.scss
@@ -4,8 +4,7 @@
 		margin-top: 46px;
 
 		.coblocks-gallery--caption {
-			font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
-				"Helvetica Neue", sans-serif;
+			font-family: $default-font;
 			font-size: 0.71111em;
 			line-height: 1.6;
 			margin: 0 0 -20px;
