--- a/src/blocks/accordion/styles/editor.scss
+++ b/src/blocks/accordion/styles/editor.scss
@@ -48,9 +48,9 @@
 	}
 
 	&.block-editor-button-block-appender:focus {
-		background-color: #fff;
-		box-shadow: inset 0 0 0 1px #6c7781, inset 0 0 0 2px #fff !important;
-		color: #191e23;
+		background-color: $white;
+		box-shadow: inset 0 0 0 1px $dark-gray-300, inset 0 0 0 2px $white !important;
+		color: $dark-gray-900;
 		outline: 2px solid transparent;
 	}
 }
